# -glue-drift

./: README.md  jobs.yaml  pyproject.toml
.github/workflows/: publish.yml
glue_drift/: __init__.py  checker.py  cli.py  fetcher.py  normalizer.py  reporter.py
tests/: test_checker.py
