[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glue-drift"
version = "0.1.0"
description = "Detect configuration drift in AWS Glue jobs against a source-of-truth YAML"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Pushpalatha58", email = "" }
]
keywords = ["aws", "glue", "drift", "data-engineering", "devops", "ci-cd"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "click>=8.1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "moto[glue]>=5.0",
]

[project.scripts]
glue-drift = "glue_drift.cli:cli"

[project.urls]
Homepage = "https://github.com/Pushpalatha58/-glue-drift"
Issues = "https://github.com/Pushpalatha58/-glue-drift/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["glue_drift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
